readAllBytes method is from jdk9